// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketAssignment/> should call \`fetchChats\` on submit when the \`assignment_channels\` setting has changed and \`auto_assign_to_teams\` is enabled 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "facebook-messenger",
        ],
        "auto_assign_to_teams": true,
        "max_user_chat_ticket": 3,
        "max_user_non_chat_ticket": 4,
        "unassign_on_reply": true,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> should call \`fetchChats\` on submit when the \`auto_assign_to_teams\` setting has changed 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": false,
        "max_user_chat_ticket": 3,
        "max_user_non_chat_ticket": 4,
        "unassign_on_reply": true,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> should call \`submitSetting\` and call \`fetchChats\` on submit when the account has no \`ticket-assignment\` setting 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": false,
        "max_user_chat_ticket": 3,
        "max_user_non_chat_ticket": 4,
        "unassign_on_reply": true,
      },
      "id": undefined,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> should call \`submitSetting\` and not call \`fetchChats\` on submit when nor the \`auto_assign_to_teams\` setting nor the \`assignment_channels\` setting has changed 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": true,
        "max_user_chat_ticket": 3,
        "max_user_non_chat_ticket": 4,
        "unassign_on_reply": true,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> should not call \`fetchChats\` on submit when the \`assignment_channels\` setting has changed but \`auto_assign_to_teams\` is disabled 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "facebook-messenger",
        ],
        "auto_assign_to_teams": false,
        "max_user_chat_ticket": 3,
        "max_user_non_chat_ticket": 4,
        "unassign_on_reply": true,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;

exports[`<TicketAssignment/> should render the "Save changes" button loading and disabled when the setting are being saved 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="align-items-center"
    >
      <span>
        Ticket assignment
      </span>
      <button
        class="wrapper wrapper ml-3 fill secondary medium"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            info_outline
          </i>
          Learn
        </span>
      </button>
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <form
      class=""
    >
      <div
        class="contentWrapper row"
      >
        <div
          class="col"
        >
          <h3
            class="heading-section-semibold mb8"
          >
            Team auto-assignment settings
          </h3>
          <div
            class="mb16 form-group"
          >
            <div>
              <label
                class="label label"
                for="auto_assign_to_teams"
              >
                <input
                  checked=""
                  class="input"
                  id="auto_assign_to_teams"
                  name="auto_assign_to_teams"
                  type="checkbox"
                />
                Auto-assign tickets
              </label>
              <div
                class="caption caption"
              >
                <span>
                  When a ticket is assigned to a team, it will automatically be assigned to an
                   
                  <strong
                    class="labelBoldText"
                  >
                    eligible member
                  </strong>
                   
                  of that team
                </span>
              </div>
            </div>
          </div>
          <div
            class="mb32 form-group"
          >
            <label
              class="label body-semibold limitsHeader"
            >
              Auto-assignment limits
              <i
                class="material-icons infoIcon"
                id="limits-info"
              >
                info_outline
              </i>
            </label>
            <div
              class="limits"
            >
              <div
                class="limitsSection"
              >
                <label
                  class="limitLabel"
                >
                  <span
                    class="limitInput wrapper group horizontal"
                  >
                    <input
                      class="input"
                      max="500"
                      min="0"
                      required=""
                      step="1"
                      type="number"
                      value="3"
                    />
                    <span
                      class="controls group vertical"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small top"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_up
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small bottom"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_down
                        </i>
                      </button>
                    </span>
                  </span>
                  <strong
                    class="limitsTooltip"
                    id="chat-messaging-tooltip"
                  >
                    Chat & Messaging
                  </strong>
                   
                  tickets
                </label>
              </div>
              <div
                class="limitsSection"
              >
                <label
                  class="limitLabel"
                >
                  <span
                    class="limitInput wrapper group horizontal"
                  >
                    <input
                      class="input"
                      max="500"
                      min="0"
                      required=""
                      step="1"
                      type="number"
                      value="4"
                    />
                    <span
                      class="controls group vertical"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small top"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_up
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small bottom"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_down
                        </i>
                      </button>
                    </span>
                  </span>
                  <strong
                    class="limitsTooltip"
                    id="other-text-tooltip"
                  >
                    Other text
                  </strong>
                   
                  tickets
                </label>
              </div>
            </div>
          </div>
          <div
            class="mb40 form-group"
          >
            <h3
              class="heading-section-semibold"
            >
              Unassignment settings
            </h3>
            <div>
              <label
                class="label label"
                for="unassign_on_reply"
              >
                <input
                  checked=""
                  class="input"
                  id="unassign_on_reply"
                  name="unassign_on_reply"
                  type="checkbox"
                />
                Unassign on reply
                 
                <i
                  class="material-icons infoIcon"
                  id="unassign-info"
                >
                  info_outline
                </i>
              </label>
            </div>
          </div>
          <div
            class="mb40 form-group"
          >
            <h3
              class="heading-section-semibold mb8"
            >
              Channels
            </h3>
            <p
              class="body-regular description mb8"
            >
              Apply ticket assignment settings to the following channels
            </p>
            <ul
              aria-label="MultiSelectOptionField mock"
            >
              <li>
                chat
                <button
                  type="button"
                >
                  Remove 
                  chat
                </button>
              </li>
              <li>
                facebook-messenger
                <button
                  type="button"
                >
                  Remove 
                  facebook-messenger
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        class="wrapper fill primary medium isDisabled"
        disabled=""
        type="submit"
      >
        <svg
          class="spinner gloom spinner medium"
          preserveAspectRatio="xMidYMid meet"
          role="status"
          viewBox="0 0 20 20"
          width="100%"
        >
          <circle
            class="dot"
            cx="10"
            cy="10"
            fill="none"
            r="6"
            stroke-width="2"
          />
          <circle
            class="circle"
            cx="10"
            cy="10"
            fill="none"
            r="6"
            stroke-width="2"
          />
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </svg>
        Save changes
      </button>
    </form>
  </div>
</div>
`;

exports[`<TicketAssignment/> should render the create team cta when no team exists 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="align-items-center"
    >
      <span>
        Ticket assignment
      </span>
      <button
        class="wrapper wrapper ml-3 fill secondary medium"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            info_outline
          </i>
          Learn
        </span>
      </button>
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <form
      class=""
    >
      <div
        class="contentWrapper row"
      >
        <div
          class="col"
        >
          <h3
            class="heading-section-semibold mb8"
          >
            Team auto-assignment settings
          </h3>
          <div
            class="alert info missingTeamAlert"
          >
            <div
              class="iconContainer"
            >
              <img
                alt="icon"
                src="test-file-stub"
              />
            </div>
            <div
              class="content"
            >
              <span
                class="label"
              >
                You haven't set up any teams yet. Create your first team to configure auto assignment.
              </span>
              <div
                class="customActions"
              >
                <button
                  class="wrapper ghost primary medium"
                  type="button"
                >
                  Create team
                </button>
              </div>
            </div>
          </div>
          <div
            class="mb40 form-group"
          >
            <h3
              class="heading-section-semibold"
            >
              Unassignment settings
            </h3>
            <div>
              <label
                class="label label"
                for="unassign_on_reply"
              >
                <input
                  checked=""
                  class="input"
                  id="unassign_on_reply"
                  name="unassign_on_reply"
                  type="checkbox"
                />
                Unassign on reply
                 
                <i
                  class="material-icons infoIcon"
                  id="unassign-info"
                >
                  info_outline
                </i>
              </label>
            </div>
          </div>
          <div
            class="mb40 form-group"
          >
            <h3
              class="heading-section-semibold mb8"
            >
              Channels
            </h3>
            <p
              class="body-regular description mb8"
            >
              Apply ticket assignment settings to the following channels
            </p>
            <ul
              aria-label="MultiSelectOptionField mock"
            >
              <li>
                chat
                <button
                  type="button"
                >
                  Remove 
                  chat
                </button>
              </li>
              <li>
                facebook-messenger
                <button
                  type="button"
                >
                  Remove 
                  facebook-messenger
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        class="wrapper fill primary medium"
        type="submit"
      >
        Save changes
      </button>
    </form>
  </div>
</div>
`;

exports[`<TicketAssignment/> should render the store data 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="align-items-center"
    >
      <span>
        Ticket assignment
      </span>
      <button
        class="wrapper wrapper ml-3 fill secondary medium"
        type="button"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            info_outline
          </i>
          Learn
        </span>
      </button>
    </h1>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <form
      class=""
    >
      <div
        class="contentWrapper row"
      >
        <div
          class="col"
        >
          <h3
            class="heading-section-semibold mb8"
          >
            Team auto-assignment settings
          </h3>
          <div
            class="mb16 form-group"
          >
            <div>
              <label
                class="label label"
                for="auto_assign_to_teams"
              >
                <input
                  checked=""
                  class="input"
                  id="auto_assign_to_teams"
                  name="auto_assign_to_teams"
                  type="checkbox"
                />
                Auto-assign tickets
              </label>
              <div
                class="caption caption"
              >
                <span>
                  When a ticket is assigned to a team, it will automatically be assigned to an
                   
                  <strong
                    class="labelBoldText"
                  >
                    eligible member
                  </strong>
                   
                  of that team
                </span>
              </div>
            </div>
          </div>
          <div
            class="mb32 form-group"
          >
            <label
              class="label body-semibold limitsHeader"
            >
              Auto-assignment limits
              <i
                class="material-icons infoIcon"
                id="limits-info"
              >
                info_outline
              </i>
            </label>
            <div
              class="limits"
            >
              <div
                class="limitsSection"
              >
                <label
                  class="limitLabel"
                >
                  <span
                    class="limitInput wrapper group horizontal"
                  >
                    <input
                      class="input"
                      max="500"
                      min="0"
                      required=""
                      step="1"
                      type="number"
                      value="20"
                    />
                    <span
                      class="controls group vertical"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small top"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_up
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small bottom"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_down
                        </i>
                      </button>
                    </span>
                  </span>
                  <strong
                    class="limitsTooltip"
                    id="chat-messaging-tooltip"
                  >
                    Chat & Messaging
                  </strong>
                   
                  tickets
                </label>
              </div>
              <div
                class="limitsSection"
              >
                <label
                  class="limitLabel"
                >
                  <span
                    class="limitInput wrapper group horizontal"
                  >
                    <input
                      class="input"
                      max="500"
                      min="0"
                      required=""
                      step="1"
                      type="number"
                      value="50"
                    />
                    <span
                      class="controls group vertical"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small top"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_up
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small bottom"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          arrow_drop_down
                        </i>
                      </button>
                    </span>
                  </span>
                  <strong
                    class="limitsTooltip"
                    id="other-text-tooltip"
                  >
                    Other text
                  </strong>
                   
                  tickets
                </label>
              </div>
            </div>
          </div>
          <div
            class="mb40 form-group"
          >
            <h3
              class="heading-section-semibold"
            >
              Unassignment settings
            </h3>
            <div>
              <label
                class="label label"
                for="unassign_on_reply"
              >
                <input
                  class="input"
                  id="unassign_on_reply"
                  name="unassign_on_reply"
                  type="checkbox"
                />
                Unassign on reply
                 
                <i
                  class="material-icons infoIcon"
                  id="unassign-info"
                >
                  info_outline
                </i>
              </label>
            </div>
          </div>
          <div
            class="mb40 form-group"
          >
            <h3
              class="heading-section-semibold mb8"
            >
              Channels
            </h3>
            <p
              class="body-regular description mb8"
            >
              Apply ticket assignment settings to the following channels
            </p>
            <ul
              aria-label="MultiSelectOptionField mock"
            >
              <li>
                chat
                <button
                  type="button"
                >
                  Remove 
                  chat
                </button>
              </li>
              <li>
                facebook-messenger
                <button
                  type="button"
                >
                  Remove 
                  facebook-messenger
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <button
        class="wrapper fill primary medium"
        type="submit"
      >
        Save changes
      </button>
    </form>
  </div>
</div>
`;

exports[`<TicketAssignment/> should send updated auto assignment limits on submit 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "assignment_channels": Array [
          "chat",
          "facebook-messenger",
        ],
        "auto_assign_to_teams": true,
        "max_user_chat_ticket": 0,
        "max_user_non_chat_ticket": 20,
        "unassign_on_reply": true,
      },
      "id": 1,
      "type": "ticket-assignment",
    },
  ],
]
`;
